reset passowrd table and routes
